--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "@angular/platform-browser": "^2.1.0",
     "@angular/platform-browser-dynamic": "^2.1.0",
     "@angular/router": "^3.1.0",
+    "@types/jquery": "^2.0.34",
+    "body-parser": "^1.15.2",
     "core-js": "^2.4.1",
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
+    "jquery": "^3.1.1",
+    "massive": "^2.5.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
@@ -28,6 +34,7 @@
   "devDependencies": {
     "@angular/compiler-cli": "^2.1.0",
     "@types/jasmine": "^2.2.30",
+    "@types/jquery": "^2.0.34",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.20-4",
     "codelyzer": "~1.0.0-beta.3",
